--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,7 +47,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(32, 17, 17, 0.4);
     margin: 0;
     padding: 0;
 }
@@ -66,11 +66,33 @@ body {
     padding-bottom: 40px;
 }
 
+#thirdParty {
+    padding-bottom: 40px;
+}
+
+.recipeHeader {
+    padding-top: 50px;
+}
+
+.recipeHeader h1 {
+    font-size: 3rem;
+}
+
+#prep-time {
+        display: inline-block;
+    }
+
 /* ------------ have to amend in media query */ 
 
 .card-image img {
     height: 250px;
     width: 250px;
+    object-fit: cover;
+}
+
+#page-image {
+    height: 300px;
+    width: 300px;
     object-fit: cover;
 }
 
@@ -88,10 +110,6 @@ body {
     justify-content: center;
     align-items: center;
     padding: 40px;
-}
-
-#thirdParty {
-    padding-bottom: 40px;
 }
 
 
@@ -121,18 +139,6 @@ body {
         height: auto;
     }
 
-    #page-image {
-    height: 300px;
-    width: 300px;
-    object-fit: cover;
-    }
-
-    #recipe-time {
-        padding-right: 5px;
-    }
-
-    #prep-time {
-        display: inline-block;
-    }
+    
 
 }
