--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -2,7 +2,7 @@
 
     {% block content %}
 
-        <div class="row">
+        <div class="row recipeHeader">
             <div class="col s12 m6 l4">
                 <img src="{{ recipe.image_url }}" id="page-image">
             </div>
@@ -13,7 +13,8 @@
                         {{ tag }}
                     </div>
                 {% endfor %}
-                <i class="fas fa-clock" id="recipe-time"></i><p id="prep-time">{{ recipe.prep_time }}</p>
+                <i class="fas fa-clock" id="recipe-time"></i>
+                <p id="prep-time">{{ recipe.prep_time }}</p>
             </div>
         </div>
 
@@ -29,24 +30,30 @@
         </div>
 
         <div class="row">
-            <p>Recipe submitted by: {{ recipe.created_by }}</p>
+            <div class="col s12">
+                <p>Recipe submitted by: {{ recipe.created_by }}</p>
+            </div>
         </div>
 
         {% if session.user|lower == recipe.created_by|lower %}
             <div class="row">
                 <div class="col s12 center-align">
                     <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn">Edit Recipe</a>
-                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn">Delete Recipe</a>
+                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn red darken-4" onclick="return confirm('Are you sure you want to delete this recipe?');">Delete Recipe</a>
                 </div>
             </div>
         {% endif %}
 
         <div class="row">
-            <div class="col s12 input-field">
+            <div class="col s12">
                 <form method="POST" action="{{ url_for('add_comment', r_id=recipe._id) }}">
-                    <label for="comment">Comments</label>
-                    <textarea id="comment" class="materialize-textarea" name="comment" rows="16" required></textarea>
-                    <button class="btn waves-effect waves-light" type="submit">Publish</button>
+                    <div class="row">
+                        <div class="col s12 input-field">
+                            <label for="comment">Leave a comment</label>
+                            <textarea id="comment" class="materialize-textarea" name="comment" rows="16" required></textarea>
+                            <button class="btn waves-effect waves-light light-green darken-1" type="submit">Publish</button>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
