--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <div class="navbar-fixed">
             <nav class="nav-extended brown darken-3">
                 <div class="nav-wrapper">
-                    <a href="{{ url_for('get_recipes') }}" class="brand-logo">cogi</a>
+                    <a href="{{ url_for('index') }}" class="brand-logo">cogi</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="{{ url_for('index') }}">Home</a></li>
