--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
                 <a href="{{ url_for('get_recipes') }}">
                     <h2 class="center-align">cooking up a community</h2>
                 </a>
-                <div >
+                <div>
                     <form action="{{ url_for('search') }}" method="post">
                         <div class="row valignwrapper centeralign">
                             <div class="input-field col s12">
@@ -46,52 +46,49 @@
                         <img src="https://www.lakeland.co.uk/common/banners/category/hero/2303-cat-hero-ooni-pizza-xl.jpg">
                     </div>
                     <div class="card-content">
-                        <p>Lakeland cookware</p>
+                        <p><strong>Lakeland cookware</strong></p>
                     </div>
                     <div class="card-action">
-                        <a href="https://www.lakeland.co.uk/shop/cooking" target="_blank">View here</a>
+                        <a href="https://www.lakeland.co.uk/shop/cooking" target="_blank"><strong>View here</strong></a>
                     </div>
                 </div>
             </div>
-
             <div class="col s12 m3">
                 <div class="card small">
                     <div class="card-image">
                         <img src="https://i.pinimg.com/originals/12/f4/dd/12f4dd62805bbc9e0cf354c785a2382b.jpg">
                     </div>
                     <div class="card-content">
-                        <p>John Lewis</p>
+                        <p><strong>John Lewis</strong></p>
                     </div>
                     <div class="card-action">
-                        <a href="https://www.johnlewis.com/home-garden/cooking-baking/c600001134" target="_blank">Shop now</a>
+                        <a href="https://www.johnlewis.com/home-garden/cooking-baking/c600001134" target="_blank"><strong>Shop now</strong></a>
                     </div>
                 </div>
             </div>
-
             <div class="col s12 m3">
                 <div class="card small">
                     <div class="card-image">
                         <img src="https://www.ikea.com/images/a-guide-to-buying-pots-and-pans-cd4046dc06fc9ad544510d3661e25907.jpg?f=xl">
                     </div>
                     <div class="card-content">
-                        <p>Ikea kitchen accessories</p>
+                        <p><strong>Ikea kitchenware</strong></p>
                     </div>
                     <div class="card-action">
-                        <a href="https://www.ikea.com/gb/en/cat/cookware-kt003/" target="_blank">Browse cookware</a>
+                        <a href="https://www.ikea.com/gb/en/cat/cookware-kt003/" target="_blank"><strong>Browse</strong></a>
                     </div>
                 </div>
             </div>
-
             <div class="col s12 m3">
                 <div class="card small">
                     <div class="card-image">
                         <img src="https://images.dunelm.com/30689930.jpg?$standardplayerdefault$&img404=noimagedefault">
                     </div>
                     <div class="card-content">
-                        <p>Dunelm Cook & Dine</p>
+                        <p><strong>Dunelm Cook & Dine</strong></p>
                     </div>
                     <div class="card-action">
-                        <a href="https://www.dunelm.com/category/home-and-furniture/cook-and-dine" target="_blank">Take a look</a>
+                        <a href="https://www.dunelm.com/category/home-and-furniture/cook-and-dine" target="_blank"><strong>Take a look</strong></a>
                     </div>
                 </div>
             </div>
