--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -66,7 +66,7 @@
             <div class="row">
                 <div class="col s12 center-align">
                     <!-- Cancel update recipe button -->
-                    <a href="{{ url_for('get_recipes') }}" class="btn-large red">
+                    <a href="{{ url_for('profile', username=session['user']) }}" class="btn-large red">
                         Cancel <i class="fas fa-times right"></i>
                     </a>
                     <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" onclick="return confirm('Are you sure you want to delete this recipe?');" class="btn-large">
