--- a/static/css/style.css
+++ b/static/css/style.css
@@ -147,6 +147,19 @@ footer a:hover {
     padding: 40px;
 }
 
+#homePageSearch {
+    width: 100%;
+    height: 40px;
+    font-family: 'Poppins', sans-serif;
+    border: 1px solid #4e342e;
+    color: #fff;
+    background-color: #4e342e;
+}
+
+#homePageSearch:hover {
+    color: #fff;
+}
+
 
 /*  ---------------------- # Media queries */
 
@@ -173,6 +186,8 @@ footer a:hover {
         width: 100vw;
         height: auto;
     }
+
+    
 
     
 
