--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                     <h2 class="center-align">cooking up a community</h2>
                 </a>
                 <div>
-                    <form action="{{ url_for('search') }}" method="post">
+                    <form action="{{ url_for('search') }}" method="post" class="col s12">
                         <div class="row valignwrapper centeralign">
                             <div class="input-field col s12">
                                 <i class="fas fa-search prefix"></i>
@@ -21,8 +21,8 @@
                                 <label for="query">Search recipes</label>
                             </div>
                             <div class="col s12">
-                                <button type="submit">
-                                    <i class="fas fa-search left"></i> Search
+                                <button type="submit" id="homePageSearch">
+                                    Find recipe
                                 </button>
                             </div>
                         </div>
