--- a/static/css/style.css
+++ b/static/css/style.css
@@ -174,6 +174,15 @@ footer a:hover {
 }
 
 
+
+.search {
+    padding: 30px 0px 20px 0px;
+}
+
+.searchTitle {
+    padding-top: 30px;
+}
+
 /*  ---------------------- # Media queries */
 
 /*  Medium devices (Tablets, 768px and up) */ 
