--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align">All recipes</h3>
+    <h3 class="center-align searchTitle">All recipes</h3>
 
-    <div class="card-panel.grey">
+    <div class="card-panel.grey search">
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valignwrapper centeralign">
                 <div class="input-field col s12 m8">
@@ -12,10 +12,10 @@
                     <label for="query">Search recipes</label>
                 </div>
                 <div class="col s12 m4">
-                    <a href="{{ url_for('get_recipes') }}" class="red btn">Reset</a>
-                    <button type="submit">
+                    <button type="submit" class="btn waves-effect waves-light brown darken-3">
                         <i class="fas fa-search left"></i> Search
                     </button>
+                    <a href="{{ url_for('get_recipes') }}" class="red btn waves-effect waves-light">Reset</a>
                 </div>
             </div>
         </form>
